5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1807_2571.log
== TEST (2019-06-12 20:57:54) 
-- CODE:
n=input("entre com a frase: ")
for i in range(len(n)):
	if (n[i] == a): 
	n.remove(n[i])
print(n)	
-- ERROR:
File "XXXX", line 4
    n.remove(n[i])
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:03:44) 
-- CODE:
n=input("entre com a frase: ")
b ="aA"
for i in range(0,len(b)):
	n=n.replace(b[i],"")

print (n)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:03:58) 
-- CODE:
n=input("entre com a frase: ")
b ="aA"
for i in range(0,len(b)):
	n=n.replace(b[i],"")

print (n)
-- EXECUTION TIME:
0.82273
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:26:12) 
-- CODE:
n=input("entre com a frase: ")
b ="eE"
for i in range(0,len(b)):
	n=n.replace(b[i],"")

print (n)
-- OUTPUT:
Instituto_d_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
